--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,12 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.10"
 torch = "^2.5.1"
+pandas = "^2.2.3"
+matplotlib = "^3.10.0"
+nltk = "^3.9.1"
+scikit-learn = "^1.6.1"
+spotipy = "^2.25.0"
+gensim = "^4.3.3"
 
 
 [build-system]
