--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,8 @@ spotipy = "^2.25.0"
 gensim = "^4.3.3"
 pyyaml = "^6.0.2"
 notebook = "^7.3.2"
+mysql-connector-python = "^9.1.0"
+sqlalchemy = "^2.0.37"
 
 
 [build-system]
