--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ mysql-connector-python = "^9.1.0"
 sqlalchemy = "^2.0.37"
 loguru = "^0.7.3"
 cupy-cuda12x = "^13.3.0"
+seaborn = "^0.13.2"
 
 
 [build-system]
